--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ logo: /img/jkan.png
 jkan_theme: Default
 
 # Authentication
-github_client_id: 
-gatekeeper_host: 
+github_client_id: 781a01f1e634e8f41a9c
+gatekeeper_host: https://datacuse.herokuapp.com
 
 # Dataset schema
 schema: default
